feat: improve version tracking and restoring backups
