# backend/internal/api/middleware.go
@@ -66,7 +66,7 @@ func corsMiddleware(next http.Handler) http.Handler {
 			w.Header().Set("Access-Control-Allow-Credentials", "true")
 			w.Header().Set("Vary", "Origin")
 			w.Header().Set("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS")
-			w.Header().Set("Access-Control-Allow-Headers", "Content-Type, X-Checksum-SHA256, X-File-Size")
+			w.Header().Set("Access-Control-Allow-Headers", "Content-Type, X-Checksum-SHA256, X-File-Size, X-Restored-From-Version-ID")
 		}
 
 		if r.Method == http.MethodOptions {
